Disabling flaky BrowserWindowPropertyManagerTest.WindowProperties test

TBR=bsep@chromium.org
BUG=752560

Change-Id: I9895e1c34ae5dc6c06e8d85679f777823d85be31
Reviewed-on: https://chromium-review.googlesource.com/602409
Commit-Queue: Joe Downing <joedow@chromium.org>
Reviewed-by: Joe Downing <joedow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492105}
Former-commit-id: 098de23f872c6b40abb93fc47434b7094f152a7b